--- a/backend/package.json
+++ b/backend/package.json
@@ -14,32 +14,32 @@
     "test:docker": "./test.sh"
   },
   "dependencies": {
-    "@prisma/client": "^5.10.0",
-    "amqplib": "^0.10.3",
-    "dotenv": "^16.4.0",
+    "@prisma/client": "^5.22.0",
+    "@redis/time-series": "^1.0.5",
+    "amqplib": "^0.10.5",
+    "cron": "^3.1.0",
+    "dotenv": "^16.4.7",
     "express": "^4.18.0",
     "ioredis": "^5.3.0",
     "jest-mock-extended": "^4.0.0-beta1",
     "jsonwebtoken": "^9.0.0",
-    "minio": "^7.1.0",
-    "openai": "^4.0.0",
+    "minio": "^7.1.3",
+    "openai": "^4.75.0",
     "ts-node": "^10.9.2",
-    "zod": "^3.22.0",
-    "cron": "^3.1.0",
-    "@redis/time-series": "^1.0.5"
+    "zod": "^3.22.0"
   },
   "devDependencies": {
-    "@types/amqplib": "^0.10.0",
-    "@types/express": "^4.17.0",
+    "@types/amqplib": "^0.10.6",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.0",
-    "@types/node": "^20.0.0",
-    "@types/supertest": "^2.0.0",
+    "@types/node": "^20.17.9",
+    "@types/supertest": "^2.0.16",
     "jest": "^29.5.0",
-    "prisma": "^5.10.0",
-    "supertest": "^6.3.0",
+    "prisma": "^5.22.0",
+    "supertest": "^6.3.4",
     "ts-jest": "^29.1.0",
     "tsx": "^4.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.7.2"
   }
 }
