--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,8 @@ coverage/
 
 # Avoid committing to submodule videollama2
 VideoLLaMA2/
+
+# Avoid video/audio files other than samples
+videos/
+audios/
+metadata/
