--- a/backend/Dockerfile.processor
+++ b/backend/Dockerfile.processor
@@ -2,15 +2,24 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-# Install FFmpeg for video processing
-RUN apk add --no-cache ffmpeg
+# Install system dependencies
+RUN apk add --no-cache \
+    ffmpeg \
+    python3 \
+    curl \
+    build-base \
+    g++ \
+    cairo-dev \
+    jpeg-dev \
+    pango-dev \
+    giflib-dev
 
 # Copy package files
 COPY package*.json ./
 COPY prisma ./prisma/
 
-# Install dependencies
-RUN npm install
+# Install dependencies with production flag
+RUN npm ci --only=production
 
 # Copy source code
 COPY . .
@@ -21,5 +30,16 @@ RUN npx prisma generate
 # Build TypeScript
 RUN npm run build
 
-# Start the video processor
-CMD ["node", "dist/services/video-processor.js"] 
+# Clean up dev dependencies and cache
+RUN npm cache clean --force && \
+    rm -rf /root/.npm
+
+# Set Node to production mode
+ENV NODE_ENV=production
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:3001/health || exit 1
+
+# Start the video processor service
+CMD ["node", "dist/services/video/videoProcessor.js"]
