--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -18,13 +18,59 @@ services:
       - MINIO_USE_SSL=false
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - JWT_SECRET=${JWT_SECRET:-default_dev_secret}
+      - MINIO_REGION=us-east-1
     volumes:
       - ./src:/app/src
     depends_on:
-      - postgres
-      - redis
-      - minio
-      - rabbitmq
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      minio:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+    deploy:
+      replicas: 3
+      update_config:
+        parallelism: 1
+        delay: 10s
+      restart_policy:
+        condition: on-failure
+        max_attempts: 3
+
+  video-processor:
+    build:
+      context: .
+      dockerfile: Dockerfile.processor
+    environment:
+      - DATABASE_URL=postgresql://user:password@postgres:5432/reality_news?schema=public
+      - REDIS_URL=redis://redis:6379
+      - RABBITMQ_URL=amqp://rabbitmq:5672
+      - MINIO_ENDPOINT=minio
+      - MINIO_PORT=9000
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER:-minioadmin}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD:-minioadmin}
+      - MINIO_USE_SSL=false
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - MINIO_REGION=us-east-1
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      minio:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+    deploy:
+      replicas: 5
+      update_config:
+        parallelism: 2
+        delay: 10s
+      restart_policy:
+        condition: on-failure
+        max_attempts: 3
 
   postgres:
     image: postgres:15-alpine
@@ -41,6 +87,12 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    deploy:
+      resources:
+        limits:
+          memory: 1G
+        reservations:
+          memory: 512M
 
   redis:
     image: redis:7-alpine
@@ -53,6 +105,12 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+        reservations:
+          memory: 256M
 
   minio:
     image: minio/minio
@@ -75,6 +133,11 @@ services:
       update_config:
         parallelism: 1
         delay: 10s
+      resources:
+        limits:
+          memory: 2G
+        reservations:
+          memory: 1G
 
   rabbitmq:
     image: rabbitmq:3-management-alpine
@@ -88,6 +151,12 @@ services:
       interval: 30s
       timeout: 20s
       retries: 3
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+        reservations:
+          memory: 256M
 
   nginx:
     image: nginx:alpine
@@ -99,46 +168,18 @@ services:
       - backend
       - minio
     deploy:
-      replicas: 3
+      replicas: 2
       update_config:
         parallelism: 1
         delay: 10s
-    healthcheck:
-      test: ["CMD", "nginx", "-t"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-  video-processor:
-    build:
-      context: .
-      dockerfile: Dockerfile.processor
-    environment:
-      - DATABASE_URL=postgresql://user:password@postgres:5432/reality_news?schema=public
-      - REDIS_URL=redis://redis:6379
-      - RABBITMQ_URL=amqp://rabbitmq:5672
-      - MINIO_ENDPOINT=minio
-      - MINIO_PORT=9000
-      - MINIO_ROOT_USER=${MINIO_ROOT_USER:-minioadmin}
-      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD:-minioadmin}
-      - MINIO_USE_SSL=false
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-    depends_on:
-      - postgres
-      - redis
-      - minio
-      - rabbitmq
-    deploy:
-      replicas: 5
       resources:
         limits:
-          cpus: '1'
-          memory: 2G
-      restart_policy:
-        condition: on-failure
+          memory: 128M
+        reservations:
+          memory: 64M
 
 volumes:
   postgres_data:
   redis_data:
   minio_data:
-  rabbitmq_data: 
+  rabbitmq_data:
