--- a/experiments/feed_app/news_feed/package.json
+++ b/experiments/feed_app/news_feed/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "ai": "^2.1.28",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "lucide-react": "^0.244.0",
-    "next": "^15.0.3",
+    "next": "13.4.4",
+    "openai-edge": "^1.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.13.0",
@@ -27,8 +30,9 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
-    "postcss": "^8.4.49",
+    "postcss": "8.4.24",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   }
 }
+
